feat:도큐먼트 수는 그대로인데 인덱스 용량만 커지는 현상 fix, age null -> 0으로 변환

--- a/logstash/conf/titanic.conf
+++ b/logstash/conf/titanic.conf
@@ -5,24 +5,23 @@ input {
     jdbc_connection_string => "jdbc:mysql://localhost:3306/fisa?useSSL=false"
     jdbc_user => "myuser"
     jdbc_password => "mypassword"
-    schedule => "*/2 * * * * *" # 매 5초마다 쿼리 실행
-    statement => "select * from titanic"
-    last_run_metadata_path => "/home/ubuntu/last_run_metadata.yml"
+    jdbc_paging_enabled => true
+    jdbc_page_size => 50
+    statement => "SELECT * FROM titanic_raw WHERE passengerid > :sql_last_value"
+    use_column_value => true
+    record_last_run => true
+    clean_run => true
+    tracking_column => "passengerid"
+    tracking_column_type => "numeric"
+    schedule => "*/5 * * * * *"
+    last_run_metadata_path => "/home/username/workspace/ELK/logstash-7.11.1/last_run_metadata"
   }
 }
 
 filter {
   mutate {
-    convert => {
-      "passengerid" => "integer"
-      "survived" => "integer"
-      "pclass" => "integer"
-      "age" => "float"
-      "sibsp" => "integer"
-      "parch" => "integer"
-      "fare" => "float"
+        coerce => { "age" => 0 }
     }
-  }
 }
 
 output {
@@ -33,4 +32,3 @@ output {
   }
   stdout { codec => rubydebug }
 }
-
