시연화면 업로드

--- a/logstash/conf/titanic.conf
+++ b/logstash/conf/titanic.conf
@@ -7,12 +7,12 @@ input {
     jdbc_password => "mypassword"
     jdbc_paging_enabled => true
     jdbc_page_size => 50
-    statement => "SELECT * FROM titanic_raw WHERE passengerid > :sql_last_value"
+    statement => "SELECT * FROM titanic WHERE updated_at > :sql_last_value"
     use_column_value => true
     record_last_run => true
     clean_run => true
-    tracking_column => "passengerid"
-    tracking_column_type => "numeric"
+    tracking_column => "updated_at"
+    tracking_column_type => "timestamp"
     schedule => "*/5 * * * * *"
     last_run_metadata_path => "/home/username/workspace/ELK/logstash-7.11.1/last_run_metadata"
   }
